syntax = "proto3";

option go_package = "github.com/s77rt/rdpcloud/proto/go/services/netmgmt";

package services.netmgmt;

import "services/netmgmt/user.proto";
import "services/netmgmt/local_group.proto";

service Netmgmt {
	rpc AddUser(AddUserRequest) returns (AddUserResponse) {}
	rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
	rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
	rpc GetUser(GetUserRequest) returns (GetUserResponse) {}
	rpc GetMyUser(GetMyUserRequest) returns (GetMyUserResponse) {}
	rpc GetUserLocalGroups(GetUserLocalGroupsRequest) returns (GetUserLocalGroupsResponse) {}
	rpc GetMyUserLocalGroups(GetMyUserLocalGroupsRequest) returns (GetMyUserLocalGroupsResponse) {}
	rpc ChangeUserPassword(ChangeUserPasswordRequest) returns (ChangeUserPasswordResponse) {}
	rpc ChangeMyUserPassword(ChangeMyUserPasswordRequest) returns (ChangeMyUserPasswordResponse) {}
	rpc EnableUser(EnableUserRequest) returns (EnableUserResponse) {}
	rpc DisableUser(DisableUserRequest) returns (DisableUserResponse) {}

	rpc AddUserToLocalGroup(AddUserToLocalGroupRequest) returns (AddUserToLocalGroupResponse) {}
	rpc RemoveUserFromLocalGroup(RemoveUserFromLocalGroupRequest) returns (RemoveUserFromLocalGroupResponse) {}
	rpc GetLocalGroups(GetLocalGroupsRequest) returns (GetLocalGroupsResponse) {}
	rpc GetUsersInLocalGroup(GetUsersInLocalGroupRequest) returns (GetUsersInLocalGroupResponse) {}
}
